# googlecardboard-brick

./: .gitignore  .gitmodules  README.md  settings.gradle
brickcardboard-android/: CMakeLists.txt  build.gradle
brickcardboard-android/src/main/: AndroidManifest.xml
brickcardboard-android/src/main/assets/: fragmentShader.gl  vertexShader.gl
brickcardboard-android/src/main/java/com/github/kopilov/cardboard/: Util.kt  VrActivity.java
brickcardboard-android/src/main/jni/: cardboard_brick_app.cpp  cardboard_brick_app.h  cardboard_brick_jni.cpp  hello_cardboard_jni.cc  mesh.cpp  mesh.h  util.cpp  util.h
brickcardboard-android/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
